# Laconic

./: CMakeLists.txt  README.md  core.py
app/: laconic.cpp
include/: errors.hpp  scanner.hpp  types.hpp
src/: laconic.cpp
src/errors/: error_reporter.cpp
src/scanner/: scanner.cpp  scanner.hpp  token.hpp
